# bishl_backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .replit  =3.15.0  authentication.py  backfill_referee_levels.py  backup_db.py  check_assignment_conflicts.py  config.py  email.py  find_test_matches.py  import_data.py  import_hobby_players.py  import_matches.py  import_new_teams.py  import_players.py  import_referees.py  import_schedule.man  import_schedule.py  import_team_assignments.py  import_tournaments.py  logging_config.py  mail_service.py  main.py  makefile  merge_players.py  migrate_passwords_to_argon2.py  models.py  package-lock.json  package.json  pydantic_patch.py  pyproject.toml  recalculate_matchday_standings.py  remove_bishl_assignments.py  repair_assignment_conflicts.py  replit.md  replit.nix  requirements.txt  (+17 more)
attached_assets/: Pasted--VALIDATING-STANDINGS-CALCULATION-Testing-round-schuelerliga-p-2024-hauptrunde-STATS-St-1760953480058_1760953480059.txt  Pasted--workspace-validate-stats-refactoring-py--1760957217862_1760957217864.txt  Pasted-025-10-26-21-39-35-82-4a0218f7-User-result-await-app-type-ignore-func-returns-value-2025-10-2-1761511391131_1761511391132.txt  Pasted-2025-10-26-21-47-21-61-285d28ce-User-ERROR-Exception-in-ASGI-application-2025-10-26-21-47-21-61-285-1761511663089_1761511663089.txt  Pasted-2025-10-26-21-51-00-65-9f16d5af-User-ERROR-Exception-in-ASGI-application-2025-10-26-21-51-00-65-9f1-1761512406512_1761512406513.txt  Pasted-INFO-172-31-122-98-43190-GET-matches-67165e0190212e4ad16ca8dd-home-roster-HTTP-1-1-500-In-1760960926024_1760960926025.txt  Pasted-INFO-Started-reloader-process-3596-using-StatReload-Process-SpawnProcess-1-Traceback-most-r-1760963576882_1760963576883.txt  Pasted-INFO-Started-reloader-process-5209-using-StatReload-Process-SpawnProcess-1-Traceback-most-r-1760963954748_1760963954750.txt  Pasted-INFO-Started-reloader-process-5713-using-StatReload-Process-SpawnProcess-1-Traceback-most-r-1760964060578_1760964060580.txt  Pasted-INFO-Started-reloader-process-7827-using-StatReload-Process-SpawnProcess-1-Traceback-most-r-1760964891122_1760964891122.txt  Pasted-Process-SpawnProcess-1-Traceback-most-recent-call-last-File-nix-store-vnvdzw4182wb2ifzi0cczh-1760964621943_1760964621944.txt  Pasted-Process-SpawnProcess-2-Traceback-most-recent-call-last-File-nix-store-vnvdzw4182wb2ifzi0cczh-1761163860490_1761163860491.txt
backend/: import_data.py  main.py  models.py
backend/routers/: teams.py  venues.py
data/: clubs.csv  get_clubs_data.sql  get_matches_data.sql  get_player_data.sql  get_teams_data.sql  get_tournaments_data.sql  get_venues_data.sql  venues.csv
docs/: code-quality-guide.md
exceptions/: __init__.py  custom_exceptions.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.css  index.js  utils.js
models/: assignments.py  clubs.py  configs.py  documents.py  matchday_responses.py  matches.py  messages.py  players.py  posts.py  reftool.py  responses.py  round_responses.py  season_responses.py  seasons.py  teams.py  tournament_responses.py  tournaments.py  users.py  venues.py
routers/: assignments.py  clubs.py  configs.py  documents.py  matchdays.py  matches.py  messages.py  penalties.py  players.py  posts.py  reftool.py  root.py  roster.py  rounds.py  scores.py  seasons.py  teams.py  tournaments.py  users.py  venues.py
scripts/: backfill_team_partnership_2026.py  create_indexes.py  import_cli.py  migrate_roster_structure.py  post-merge.sh  sync_db_demo.sh
services/: __init__.py  assignment_service.py  import_service.py  license_validation_service.py  license_validation_service.py.deprecated  match_permission_service.py  match_service.py  match_settings_service.py  match_transition_service.py  message_service.py  pagination.py  penalty_service.py  performance_monitor.py  player_assignment_service.py  roster_service.py  score_service.py  stats_service.py  tournament_service.py
specs/: api-error-examples.md  api-response-standardization.md  api-usage-guide.md  async-testing-best-practices.md  database-optimization-plan.md  deployment-checklist.md  error-handling-standardization.md  error-response-format.md  import-consolidation-guide.md  manual-testing-checklist.md  match-permission-gates.md  public-api-implementation.md  pydantic-v2-migration-status.md  refactoring-roadmap.md  stats-service-refactoring-plan.md  testing-infrastructure-guide.md  token-refresh-implementation.md
tests/: __init__.py  conftest.py  test_config.py  test_safety.py
tests/e2e/: __init__.py  test_match_workflow.py  test_referee_workflow.py
tests/fixtures/: __init__.py  (+1 more)
utils/: email.py  pagination.py
(+62 files in other folders)
