[tool.poetry]
name = "repl_nix_bishlbackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
bson = "^0.5.10"
fastapi = "^0.96.0"
pydantic = "^1.10.8"
python-dotenv = "^1.0.0"
motor = "^3.6.0"
python-decouple = "^3.8"
certifi = "^2024.8.30"
pymongo = "^4.9"
uvicorn = "^0.22.0"
email-validator = "1.3.1"
django-routers = "^0.2"
passlib = "^1.7.4"
Redberry = "^0.0.7"
requests = "^2.32.3"
aiohttp = "^3.10.9"
cloudinary = "^1.41.0"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
isodate = "^0.7.2"
pyjwt = "^2.9.0"
fastapi-mail = "1.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
