[tool.poetry]
name = "repl_nix_bishlbackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
bson = "^0.5.10"
fastapi = "^0.119.0"
pydantic = "^2.12.2"
pydantic-core = "^2.27.0"
python-dotenv = "^1.0.0"
motor = "^3.6.0"
python-decouple = "^3.8"
certifi = "^2024.8.30"
pymongo = "^4.9"
uvicorn = "^0.37.0"
email-validator = "^2.0.0"
django-routers = "^0.2"
passlib = "^1.7.4"
Redberry = "^0.0.7"
requests = "^2.32.3"
aiohttp = "^3.10.9"
cloudinary = "^1.41.0"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
isodate = "^0.7.2"
pyjwt = "^2.9.0"
fastapi-mail = "^1.5.7"
argon2-cffi = "^25.1.0"
loguru = "^0.7.2"
argon2 = "^0.1.10"
pydantic-settings = "^2.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
faker = "^37.12.0"
freezegun = "^1.5.5"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.14.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | backups
  | logs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "virtualenv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
exclude = [
    '^\.venv/',
    '^venv/',
    '^virtualenv/',
    '^__pycache__/',
    '^\.git/',
    '^build/',
    '^dist/',
]

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "motor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudinary.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "isodate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"